prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_const_table.nut
const TAB1 = {}
const TAB2 = {x = 4}
let x: array = true ? TAB1 : TAB2
return x